--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 - name: Publish package
-  on: release
+  if: github.event_name == 'release'
   uses: pypa/gh-action-pypi-publish@release/v1
   with:
     password: ${{ secrets.PYPI_API_TOKEN }}
