--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,12 @@
-[MESSAGES CONTROL]
-enable=
-    use-symbolic-message-instead,
-    useless-suppression,
+[BASIC]
+good-names-rgxs =
+good-names=i,j,k,ex,Run,_,pk,x,y,fd
 
+[MESSAGES CONTROL]
 disable=
-    missing-docstring
+    missing-function-docstring,
+    missing-module-docstring,
+    deprecated-decorator
+[SIMILARITIES]
+# Minimum lines number of a similarity.
+min-similarity-lines=1
